@@ -14,6 +14,9 @@ Release 1.1.3 (in development)
 * #695: When the highlight language "python" is specified explicitly,
   do not try to parse the code to recognize non-Python snippets.
 
+* #859: Fix exception under certain circumstances when not finding
+  appropriate objects to link to.
+
 
 Release 1.1.2 (Nov 1, 2011) -- 1.1.1 is a silly version number anyway!
 ======================================================================
